Fix a problem whit the Growth Section'
Between 768-790px there was a problem whit horizontal scroll bar poping out.
I have added overflow: hidden to the .growth class in order to fix it.

--- a/assets/css/3-sections/_growth.sass
+++ b/assets/css/3-sections/_growth.sass
@@ -1,4 +1,5 @@
 .growth
+  overflow: hidden
 
   &__wrapper
     margin-top: 3.3rem
